Add cors initializer

--- a/app/views/spree/admin/shared/_header.html.erb
+++ b/app/views/spree/admin/shared/_header.html.erb
@@ -5,7 +5,6 @@
       <div class="row">
         <div class="navbar-header col-xs-3 col-md-2">
           <%= link_to(
-            image_tag(Spree::Config[:admin_interface_logo], id: 'logo'),
             spree.admin_path,
             class: "logo navbar-brand"
           ) %>
@@ -25,3 +24,6 @@
   </nav>
 
 </header>
+
+
+<!-- image_tag(Spree::Config[:admin_interface_logo], id: 'logo'), logo path -->
