Add livestream url in menu

--- a/app/views/spree/admin/shared/_main_menu.html.erb
+++ b/app/views/spree/admin/shared/_main_menu.html.erb
@@ -51,4 +51,10 @@
       <%= main_menu_tree Spree.t(:configurations), icon: "settings.svg", sub_menu: "configuration", url: "#sidebar-configuration" %>
     </ul>
   <% end %>
+
+  <% if can? :admin, LiveStream %>
+    <ul class="nav nav-sidebar border-bottom" id="sidebarLiveStream">
+      <%= main_menu_tree Spree.t(:live_stream), icon: "products.svg", sub_menu: "live_stream", url: "#sidebar-live-stream" %>
+    </ul>
+  <% end %>
 </nav>
