--- a/app/views/spree/admin/shared/_main_menu.html.erb
+++ b/app/views/spree/admin/shared/_main_menu.html.erb
@@ -54,7 +54,7 @@
 
   <% if can? :admin, LiveStream %>
     <ul class="nav nav-sidebar border-bottom" id="sidebarLiveStream">
-      <%= main_menu_tree Spree.t(:live_stream), icon: "products.svg", sub_menu: "live_stream", url: "#sidebar-live-stream" %>
+      <%= tab :live_streams, icon: 'list.svg', url: admin_live_stream_index_path %>
     </ul>
   <% end %>
 </nav>
