generate the playback id

--- a/app/views/spree/admin/live_stream/show.html.erb
+++ b/app/views/spree/admin/live_stream/show.html.erb
@@ -1,5 +1,4 @@
-<h1><%= @live_stream.inspect %></h1>
-<h1><%= @response[1] %></h1>
+
 
 <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @live_stream } %>
 
@@ -76,7 +75,8 @@
       <%= f.error_message_on :is_active %>
     <% end %>
 
-    <%= render partial: 'spree/admin/live_stream/new_resource_links' %>
-
+    <div class="form-actions" data-hook="buttons">
+      <%= link_to Spree.t('actions.generate_playback'), generate_playback_admin_live_stream_index_path(id: @live_stream.id), class: 'btn btn-success', data: { disable_with: "#{Spree.t('live_stream.generating')...}"} %>
+    </div>
   </fieldset>
 <% end %>
