--- a/app/views/spree/admin/live_stream/_edit_resource_links.html.erb
+++ b/app/views/spree/admin/live_stream/_edit_resource_links.html.erb
@@ -1,5 +1,5 @@
 <div class="form-actions" data-hook="buttons">
-  <%= button Spree.t('actions.edit'), 'save.svg', 'submit', {class: 'btn-success', data: { disable_with: "#{ Spree.t(:updating) }..." }} %>
+  <%= button Spree.t('actions.update'), 'save.svg', 'submit', {class: 'btn-success', data: { disable_with: "#{ Spree.t(:updating) }..." }} %>
   <span class="or"><%= Spree.t(:or) %></span>
   <%= button_link_to Spree.t('actions.cancel'), admin_live_stream_index_path, icon: 'cancel.svg' %>
 </div>
