--- a/app/views/spree/admin/live_stream/show.html.erb
+++ b/app/views/spree/admin/live_stream/show.html.erb
@@ -75,6 +75,12 @@
       <%= f.error_message_on :is_active %>
     <% end %>
 
+    <%= f.field_container :product_ids, class: ['form-group'] do %>
+      <%= f.label :product_ids, Spree.t('live_stream.product_ids') %>
+      <%= f.collection_select(:product_ids, Spree::Product.all, :id, :name, { include_blank: Spree.t('match_choices.none') }, { class: 'select2', multiple: :true, :disabled => "disabled" }) %>
+      <%= f.error_message_on :product_ids %>
+    <% end %>
+
     <div class="form-actions" data-hook="buttons">
       <%= link_to Spree.t('actions.generate_playback'), generate_playback_admin_live_stream_index_path(id: @live_stream.id), class: 'btn btn-success', data: { disable_with: "#{Spree.t('live_stream.generating')...}"} %>
     </div>
