--- a/app/views/spree/admin/shared/_main_menu.html.erb
+++ b/app/views/spree/admin/shared/_main_menu.html.erb
@@ -51,4 +51,10 @@
       <%= main_menu_tree Spree.t(:configurations), icon: "settings.svg", sub_menu: "configuration", url: "#sidebar-configuration" %>
     </ul>
   <% end %>
+
+  <% if Spree.user_class && can?(:admin, Spree.user_class) %>
+    <ul class="nav nav-sidebar border-bottom" id="sidebarUsermenu">
+      <%= tab "Menu Navigator", url: new_admin_menu_item_path, icon: 'users.svg' %>
+    </ul>
+  <% end %>
 </nav>
