--- a/app/views/spree/admin/menu_items/_form.html.erb
+++ b/app/views/spree/admin/menu_items/_form.html.erb
@@ -43,3 +43,8 @@
     <%= link_to_with_icon 'remove', Spree.t('actions.cancel'), admin_menu_items_path, class: 'button' %>
   </div>
 </fieldset>
+
+
+
+<script>
+</script>
