--- a/app/assets/stylesheets/spree/backend/login.css
+++ b/app/assets/stylesheets/spree/backend/login.css
@@ -24,7 +24,7 @@ $primary: #2196F3;
   width: 100%;
   min-height: 100%;
   padding: 20px;
-  background: rgba(darken(##2196F3,40%), 0.85);
+  background: rgba(darken(#2196F3,40%), 0.85);
   font-family: "Open Sans", sans-serif;
   height: 100vh;
       background-image: url("https://i.imgur.com/HgflTDf.jpg");
