--- a/app/assets/stylesheets/spree/backend/login.scss
+++ b/app/assets/stylesheets/spree/backend/login.scss
@@ -27,7 +27,7 @@ $primary: #2196F3;
   background: rgba(darken(#2196F3,40%), 0.85);
   font-family: "Open Sans", sans-serif;
   height: 100vh;
-      background-image: url("https://i.imgur.com/HgflTDf.jpg");
+  background-image: url("https://i.imgur.com/HgflTDf.jpg");
   background-size: cover;
 }
 
@@ -41,8 +41,8 @@ $primary: #2196F3;
   position: relative;
   padding-bottom: 80px;
   box-shadow: 0px 1px 5px rgba(0,0,0,0.3);
-}
-  &.loading {
+
+  .loading {
     .btn {
       max-height: 100%;
       padding-top: 50px;
@@ -53,7 +53,7 @@ $primary: #2196F3;
     }
   }
 
-  &.ok {
+  .ok {
     .btn {
       background-color: #8bc34a;
     }
@@ -74,7 +74,7 @@ $primary: #2196F3;
     transition: border-width 0.2s ease;
     border-radius: 2px;
     color: black;
-}
+
     &+ i.fa {
         color: #fff;
       font-size: 1em;
@@ -96,7 +96,7 @@ $primary: #2196F3;
       border-color: #2196F3;
       border-left-width: 35px;
     }
-
+  }
 
   .title {
     color: #444;
@@ -121,44 +121,41 @@ $primary: #2196F3;
     bottom: 0;
     max-height: 60px;
     border: 0px solid rgba(0,0,0,0.1);
-  border-radius: 0 0 2px 2px;
+    border-radius: 0 0 2px 2px;
     transform: rotateZ(0deg);
-
     transition: all 0.1s ease-out;
-      border-bottom-width: 7px;
-    }
+    border-bottom-width: 7px;
+  }
 
-    .spinner {
-      display: block;
-      width: 40px;
-      height: 40px;
-      position: absolute;
-      border: 4px solid #ffffff;
-      border-top-color: rgba(255,255,255,0.3);
-      border-radius: 100%;
-      left: 50%;
-      top: 0;
-      opacity: 0;
-      margin-left: -20px;
-      margin-top: -20px;
-      animation: spinner 0.6s infinite linear;
-      transition: top 0.3s 0.3s ease,
-                opacity 0.3s 0.3s ease,
-                border-radius 0.3s ease;
-      box-shadow: 0px 1px 0px rgba(0,0,0,0.2);
-    }
-
-
-
-    &:not(.loading) .btn:hover {
-      box-shadow: 0px 1px 3px #2196F3;
-    }
-    &:not(.loading) .btn:focus {
-      border-bottom-width: 4px;
-    }
+  .spinner {
+    display: block;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    border: 4px solid #ffffff;
+    border-top-color: rgba(255,255,255,0.3);
+    border-radius: 100%;
+    left: 50%;
+    top: 0;
+    opacity: 0;
+    margin-left: -20px;
+    margin-top: -20px;
+    animation: spinner 0.6s infinite linear;
+    transition: top 0.3s 0.3s ease,
+              opacity 0.3s 0.3s ease,
+              border-radius 0.3s ease;
+    box-shadow: 0px 1px 0px rgba(0,0,0,0.2);
+  }
 
 
 
+  &:not(.loading) .btn:hover {
+    box-shadow: 0px 1px 3px #2196F3;
+  }
+  &:not(.loading) .btn:focus {
+    border-bottom-width: 4px;
+  }
+}
 
 footer {
   display: block;
