--- a/app/views/spree/admin/shared/_main_menu.html.erb
+++ b/app/views/spree/admin/shared/_main_menu.html.erb
@@ -58,6 +58,12 @@
     </ul>
   <% end %>
 
+  <% if can? :admin, Message %>
+    <ul class="nav nav-sidebar border-bottom" id="sidebarMessage">
+      <%= tab :messages, icon: 'list.svg', url: admin_messages_path %>
+    </ul>
+  <% end %>
+
   <% if Spree.user_class && can?(:admin, Spree.user_class) %>
     <ul class="nav nav-sidebar border-bottom" id="sidebarUser">
       <%= tab *Spree::BackendConfiguration::USER_TABS, url: spree.admin_users_path, icon: 'users.svg' %>
