--- a/app/views/spree/admin/live_stream/index.html.erb
+++ b/app/views/spree/admin/live_stream/index.html.erb
@@ -6,7 +6,26 @@
   <%= button_link_to Spree.t(:add_live_stream), spree.new_admin_live_stream_path(@user), class: "btn-success", icon: 'add.svg' if can?(:create, Spree::Store) %>
 <% end %>
 
-<% if @live_streams.present? %>
+<% content_for :table_filter do %>
+  <div data-hook="admin_products_sidebar">
+    <%= search_form_for [:admin, @search], url: admin_live_stream_index_path do |f| %>
+      <%- locals = {f: f} %>
+      <div data-hook="admin_products_index_search" class="row">
+        <div class="col-12 col-lg-6">
+          <div class="form-group">
+            <%= f.label :search_by_title, Spree.t(:title) %>
+            <%= f.search_field :title, size: 15, class: "form-control js-quick-search-target js-filterable" %>
+          </div>
+        </div>
+        </div>
+      </div>
+      <div data-hook="admin_products_index_search_buttons" class="form-actions">
+        <%= button Spree.t(:search), 'search.svg' %>
+      </div>
+    <% end %>
+<% end %>
+
+<% if @collection.present? %>
 <div class="table-responsive">
   <table class="table">
     <thead>
@@ -20,7 +39,7 @@
     <thead>
     <tbody>
       <%# @response[1]['data'].each do |stream| %>
-      <% @live_streams.each do |live_stream| %>
+      <% @collection.each do |live_stream| %>
         <tr class="live_stream_<%= live_stream.id %>">
           <td><%= link_to live_stream.title, admin_live_stream_path(live_stream.id) %></td>
           <td><%= live_stream.description %></td>
@@ -42,3 +61,5 @@
     <%= Spree.t(:no_resource_found, resource: plural_resource_name(LiveStream)) %>
   </div>
 <% end %>
+
+<%= render partial: 'spree/admin/shared/index_table_options', locals: { collection: @collection } %>
