--- a/app/views/spree/admin/messages/edit.html.erb
+++ b/app/views/spree/admin/messages/edit.html.erb
@@ -7,6 +7,11 @@
 
 <%= form_for [:admin, @message], url: admin_message_path(id: @message.id), html: { multipart: true }, method: :patch do |f| %>
   <fieldset data-hook="new_message">
+    <%= f.field_container :message, class: ['form-group'] do %>
+      <%= f.label :name, Spree.t(:message) %> <span class="required">*</span>
+      <%= f.text_field :message, class: 'form-control message', required: :required %>
+      <%= f.error_message_on :message %>
+    <% end %>
     <%= f.hidden_field :sender_type, value: "Spree::User" %>
     <%= f.hidden_field :receiver_type, value: "Spree::User" %>
     <%= f.field_container :sender_id, class: ['form-group'] do %>
