--- a/app/views/spree/admin/messages/show.html.erb
+++ b/app/views/spree/admin/messages/show.html.erb
@@ -7,6 +7,24 @@
 
 <%= form_for [:admin, @message], url: admin_message_path(id: @message.id), html: { multipart: true }, method: :patch do |f| %>
   <fieldset data-hook="new_message">
+    <%= f.field_container :message, class: ['form-group'] do %>
+      <%= f.label :name, Spree.t(:message) %> <span class="required">*</span>
+      <%= f.text_field :message, class: 'form-control message', required: :required, readonly: :true %>
+      <%= f.error_message_on :message %>
+    <% end %>
+    <% if @message&.sender_type == "Spree::User" %>
+      <%= f.field_container :sender_email, class: ['form-group'] do %>
+        <%= f.label :name, Spree.t(:sender_email) %> <span class="required">*</span>
+        <%= text_field_tag 'query', @message.sender.email, class: 'form-control', readonly: :true %>
+        <%= f.error_message_on :sender_email %>
+      <% end %>
+    <% elsif message&.sender_type == "Spree::User" %>
+      <%= f.field_container :sender_full_name, class: ['form-group'] do %>
+        <%= f.label :name, Spree.t(:sender_full_name) %> <span class="required">*</span>
+        <%= text_field_tag 'query', @message.sender.full_name, class: 'form-control', readonly: :true %>
+        <%= f.error_message_on :sender_full_name %>
+      <% end %>
+    <% end %>
     <%= f.field_container :sender_type, class: ['form-group'] do %>
       <%= f.label :name, Spree.t(:sender_type) %> <span class="required">*</span>
       <%= f.text_field :sender_type, class: 'form-control sender_type', required: :required, readonly: :true %>
