--- a/app/views/spree/admin/menu_items/_tree.html.erb
+++ b/app/views/spree/admin/menu_items/_tree.html.erb
@@ -19,11 +19,12 @@
     <%= label_tag nil, Spree.t(:tree) %>
     <script>
       Spree.routes.admin_menu_items_path = "<%= spree.admin_menu_items_path %>";
-      Spree.routes.jstree_theme_path = "<%#= stylesheet_path("jquery.jstree/themes/apple/style.css") %>";
+      Spree.routes.jstree_theme_path = "<%= stylesheet_path("https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css") %>";
     </script>
 
     <div id="menu_tree" class="tree"></div>
-
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
+    <%#= render '/spree/admin/menu_items/children_menu' %>
     <div id="progress" style="display:none;">
       <%= image_tag 'instinct_logo.png', :title => 'Spinner', :style => "vertical-align:bottom;" %> <%= Spree.t(:updating) %>...
     </div>
