remove remember me and change menunavigator home

--- a/app/views/spree/admin/shared/_main_menu.html.erb
+++ b/app/views/spree/admin/shared/_main_menu.html.erb
@@ -42,10 +42,10 @@
 
   <% if Spree.user_class && can?(:admin, Spree.user_class) %>
     <ul class="nav nav-sidebar border-bottom" id="sidebarUsermenu">
-      <%= tab "Menu Navigator", url: new_admin_menu_item_path, icon: 'users.svg' %>
+      <%= tab "Menu Navigator", url: admin_menu_items_path, icon: 'users.svg' %>
     </ul>
   <% end %>
-  
+
   <% if can? :admin, LiveStream %>
     <ul class="nav nav-sidebar border-bottom" id="sidebarLiveStream">
       <%= tab :live_streams, icon: 'list.svg', url: admin_live_stream_index_path %>
