--- a/app/views/spree/shared/_login.html.erb
+++ b/app/views/spree/shared/_login.html.erb
@@ -22,7 +22,7 @@
           <%= f.label :remember_me, '' %>
         </div>
 
-        <%= f.label :remember_me, Spree.t(:remember_me), class: 'spree-checkbox-label' %>
+        <%#= f.label :remember_me, Spree.t(:remember_me), class: 'spree-checkbox-label' %>
       </div>
     <% end %>
 
