--- a/app/views/spree/admin/messages/edit.html.erb
+++ b/app/views/spree/admin/messages/edit.html.erb
@@ -8,7 +8,7 @@
 <%= form_for [:admin, @message], url: admin_message_path(id: @message.id), html: { multipart: true }, method: :patch do |f| %>
   <fieldset data-hook="new_message">
     <%= f.field_container :message, class: ['form-group'] do %>
-      <%= f.label :name, Spree.t(:message) %> <span class="required">*</span>
+      <%= f.label :message, Spree.t(:message) %> <span class="required">*</span>
       <%= f.text_field :message, class: 'form-control message', required: :required %>
       <%= f.error_message_on :message %>
     <% end %>
