change logo in side menu

--- a/app/views/spree/admin/shared/_main_menu.html.erb
+++ b/app/views/spree/admin/shared/_main_menu.html.erb
@@ -48,19 +48,19 @@
 
   <% if can? :admin, LiveStream %>
     <ul class="nav nav-sidebar border-bottom" id="sidebarLiveStream">
-      <%= tab :live_streams, icon: 'list.svg', url: admin_live_stream_index_path %>
+      <%= tab :live_streams, icon: 'live.svg', url: admin_live_stream_index_path %>
     </ul>
   <% end %>
 
   <% if can? :admin, Contact %>
     <ul class="nav nav-sidebar border-bottom" id="sidebarContact">
-      <%= tab :contacts, icon: 'list.svg', url: admin_contacts_path %>
+      <%= tab :contacts, icon: 'contact.svg', url: admin_contacts_path %>
     </ul>
   <% end %>
 
   <% if can? :admin, Message %>
     <ul class="nav nav-sidebar border-bottom" id="sidebarMessage">
-      <%= tab :messages, icon: 'list.svg', url: admin_messages_path %>
+      <%= tab :messages, icon: 'message.svg', url: admin_messages_path %>
     </ul>
   <% end %>
 
