cherry pick previous Messages views part 5 and final, still needs UI cleanup (two-panel layout) and method calls

--- a/app/views/spree/admin/shared/_main_menu.html.erb
+++ b/app/views/spree/admin/shared/_main_menu.html.erb
@@ -60,7 +60,7 @@
 
   <% if can? :admin, Message %>
     <ul class="nav nav-sidebar border-bottom" id="sidebarMessage">
-      <%= tab :messages, icon: 'message.svg', url: admin_messages_path %>
+      <%= main_menu_tree Spree.t(:messages), icon: "message.svg", sub_menu: "messages", url: "#sidebar-messages" %>
     </ul>
   <% end %>
 
